--- a/thesisstyle.css
+++ b/thesisstyle.css
@@ -187,39 +187,61 @@
 
 /* Footer Styles */
 .footer {
-    background-color: #727272; /* Gray background color */
-    padding: 20px 0;
-  }
-  
-  .text-left p, .text-right p {
-    margin: 0;
-  }
-  
-  .text-left .flag-image {
-    width: 24px; /* Adjust as needed */
-    vertical-align: middle;
-    margin-left: 5px;
-  }
-  
-  .footer-image {
-    width: 100px; /* Adjust as needed */
-    height: auto;
-  }
-  
-  .text-right {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-  }
-  
-  .text-right .social-icon {
-    margin-left: 10px;
-  }
-  
-  .social-logo {
-    width: 24px; /* Adjust as needed */
-    height: auto;
-    vertical-align: middle;
-  }
-  
-  
+  background-color: #727272;
+  padding: 20px 0;
+}
+
+.footer-image {
+  width: 100px;
+  height: auto;
+}
+
+/* Text Alignments */
+.text-left {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.text-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.text-right p {
+  margin: 0;
+}
+
+.text-right .flag-image {
+  width: 24px;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+
+.text-right .social-icon {
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.social-logo {
+  width: 24px;
+  height: auto;
+  vertical-align: middle;
+}
+
+/* Centered Heading */
+.centered-heading {
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  margin-bottom: 20px;
+  color: white;
+}
+
